--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-resizable-panels": "^4.1.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
